<resources>
    <string name="app_name"></string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="recucontrase_a">Recuperar Contraseña</string>
    <string name="tu_inventario_personal">Tu Inventario Personal</string>
    <string name="nombre">Nombre</string>
    <string name="repecontrase_a">Repetir Contraseña</string>
    <string name="volver">Volver</string>
    <string name="a_adir_producto">Añadir Producto</string>
    <string name="ver_inventario">Ver Inventario</string>
    <string name="perfil">Perfil</string>
    <string name="tutorial_app">Tutorial APP</string>
    <string name="cantidad">Cantidad</string>
    <string name="tipo">Tipo</string>
    <string name="a_adir">Añadir</string>
    <string name="conectado_a_la_nube">Conectado a la nube</string>
    <string name="modificar">Modificar</string>
    <string name="guardar">Guardar</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="stock">Stock</string>
    <string name="precio">Precio</string>
    <string name="proveedor">Proveedor</string>
    <string name="marca">Marca</string>
    <string name="serv_220u">Serv.220u</string>
    <string name="_10">10</string>
    <string name="_1_090">1.090</string>
    <string name="cmpc">CMPC</string>
    <string name="elite">ELITE</string>
    <string name="producto2">Producto2</string>
    <string name="_850">850</string>
    <string name="juanito">Juanito</string>
    <string name="colun">Colun</string>
    <string name="producto3">Producto3</string>
    <string name="_15">15</string>
    <string name="_550">550</string>
    <string name="pepito">Pepito</string>
    <string name="nestle">Nestle</string>
    <string name="inventario">Inventario</string>
    <string name="juan_p_rez">Juan Pérez</string>
    <string name="juanito_solutions_cl">juanito@solutions.cl</string>
    <string name="pass2">********</string>
    <string name="actualizar_stock">Actualizar Stock</string>
    <string name="pan_de_molde">Pan de molde</string>
    <string name="_30">30</string>
    <string name="pan_amasado">Pan Amasado</string>
    <string name="a_adir_quitar">Añadir/Quitar</string>
    <string name="_20">20</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="escanear_codigo">Escanear Codigo</string>
    <string name="codigo">Codigo</string>
    <string name="buscar">Buscar</string>
    <string name="actualizar">Actualizar</string>
    <string name="ingresar_codigo">Ingresar Codigo</string>
    <string name="descripci_n">Descripción</string>
    <string name="tu_inventario">TU INVENTARIO</string>
</resources>
