<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:background="@drawable/fondo_pantalla">


    <Button
        android:id="@+id/btn_stockMenu"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:text="@string/actualizar_stock"
        app:layout_constraintBottom_toTopOf="@+id/btn_perfilMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tu_inventario_personal"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_inventarioMenu"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="96dp"
        android:text="@string/ver_inventario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

    <Button
        android:id="@+id/btn_añadirMenu"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:text="@string/a_adir_producto"
        app:layout_constraintBottom_toTopOf="@+id/btn_perfilMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_perfilMenu"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_inventarioMenu" />

    <Button
        android:id="@+id/btn_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/tutorial_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>